# friendhosting-cli

./: .gitignore  README.md  pyproject.toml
skills/friendhosting/: SKILL.md
skills/friendhosting/agents/: openai.yaml
src/friendhosting_cli/: __init__.py  cli.py  client.py  config.py  output.py
tests/: test_cli.py  test_client.py  test_config.py
