[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friendhosting-cli"
version = "0.1.0"
description = "Agent-friendly CLI for the public Friendhosting API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
]

[project.scripts]
friendhosting = "friendhosting_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
